--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.6.0'
+    compile group: 'org.mindrot', name: 'jbcrypt', version:'0.3m'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
