--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
             'com.amazonaws:aws-lambda-java-events:1.1.0'
     )
 
+    compileTest "com.amazonaws:DynamoDBLocal:1.11.86,2.0"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
