--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+
+    maven {
+        url 'https://s3-us-west-2.amazonaws.com/dynamodb-local/release/'
+    }
+
 }
 
 dependencies {
@@ -19,6 +24,7 @@ dependencies {
             'com.amazonaws:aws-lambda-java-events:1.1.0'
     )
 
+    testCompile group: 'com.amazonaws', name: 'DynamoDBLocal', version: '1.10.20'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
