add table template

--- a/sam.yaml
+++ b/sam.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Example Pet Store API written with spark with the aws-serverless-java-container library
+Description: tea API written with spark with the aws-serverless-java-container library
 Resources:
   TeaFunction:
     Type: AWS::Serverless::Function
