--- a/product-upload/build.gradle
+++ b/product-upload/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':library')
+    compile project(':dynamodb-library')
     compile ('com.amazonaws:aws-lambda-java-core:1.1.0',
              'com.amazonaws:aws-lambda-java-events:1.1.0')
 
