--- a/cens-user.yaml
+++ b/cens-user.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: Federate access from Cognito user Pools to QuickSight
+Description: Federate access from Cognito user Pools to CensUser
 Resources:
   CognitoUserPool:
     Type: "AWS::Cognito::UserPool"
