--- a/tea-order-table.yaml
+++ b/tea-order-table.yaml
@@ -57,6 +57,8 @@ Resources:
               - "price"
               - "paidTime"
               - "paymentMethod"
+              - "shippedDate"
+              - "shippedTime"
             ProjectionType: "INCLUDE" #modify todo
           ProvisionedThroughput:
             ReadCapacityUnits: "1"
