--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
 rootProject.name = 'tea'
-include 'library', 'dynamodb-library', 'application' , 'admin', 'product-upload'
-include 'com.cenxui.tea.app.util-test'
+include 'library','util-test', 'dynamodb-library', 'application' , 'admin'
 
