--- a/application/build.gradle
+++ b/application/build.gradle
@@ -20,6 +20,12 @@ dependencies {
     )
 
     compile project(':util-test')  //todo
+
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.255'
+
+
+    // https://mvnrepository.com/artifact/javax.mail/mail
+    testCompile group: 'javax.mail', name: 'mail', version: '1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
