--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,12 +19,9 @@ dependencies {
             'com.amazonaws:aws-lambda-java-events:1.1.0'
     )
 
-    compile project(':util-test')  //todo
 
     compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.255'
-
-
-    // https://mvnrepository.com/artifact/javax.mail/mail
+    testCompile project(':util-test')  //todo
     testCompile group: 'javax.mail', name: 'mail', version: '1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
