--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,9 +19,10 @@ dependencies {
             'com.amazonaws:aws-lambda-java-events:1.1.0'
     )
 
+    compile group: 'org.json', name: 'json', version: '20171018' //todo
 
     compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.255'
-    testCompile project(':util-test')  //todo
+    compile project(':util-test')  //todo
     testCompile group: 'javax.mail', name: 'mail', version: '1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
