--- a/application/sam-un-auth.yaml
+++ b/application/sam-un-auth.yaml
@@ -20,8 +20,7 @@ Resources:
       MemorySize: 512
       Environment:
         Variables:
-          OrderTableURL: 1234567
-          ProductTableURL : 7658301
+          Cloud: aws
           Region: ap-northeast-1
       Policies:
         - AWSLambdaBasicExecutionRole
