--- a/application/build.gradle
+++ b/application/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20171018' //todo
 
     compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: '1.11.255'
-    compile project(':util-test')  //todo
+    testCompile project(':util-test')  //todo
     testCompile group: 'javax.mail', name: 'mail', version: '1.4.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
