--- a/shop-order-table.yaml
+++ b/shop-order-table.yaml
@@ -53,7 +53,7 @@ Resources:
             AttributeName: "bankInformation"
             KeyType: "HASH"
           Projection:
-            ProjectionType: "KEYS_ONLY" #modify todo
+            ProjectionType: "ALL" #modify todo INCLUDE
           ProvisionedThroughput:
             ReadCapacityUnits: "1"
             WriteCapacityUnits: "1"
@@ -73,7 +73,7 @@ Resources:
               - "paymentMethod"
               - "shippedDate"
               - "shippedTime"
-            ProjectionType: "INCLUDE" #modify todo
+            ProjectionType: "INCLUDE" #todo INCLUDE
           ProvisionedThroughput:
             ReadCapacityUnits: "1"
             WriteCapacityUnits: "1"
@@ -108,7 +108,7 @@ Resources:
             AttributeName: "shippedTime"
             KeyType: "RANGE"
           Projection:
-            ProjectionType: "KEYS_ONLY" #modify todo
+            ProjectionType: "ALL" #modify todo KEYS_ONLY
           ProvisionedThroughput:
             ReadCapacityUnits: "1"
             WriteCapacityUnits: "1"
