--- a/admin/build.gradle
+++ b/admin/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.6.0'
 
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.268'
+
+
     testCompile project(':util-test')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
